# concorrd

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TRADEMARKS.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.podman.yml  docker-compose.yml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-dendrite-windows.yml  build-tuwunel-windows.yml  ci.yml  release.yml  windows-build.yml
beta/: ARCHITECTURE.md  Cargo.toml
beta/crates/concord-poc/: Cargo.toml
beta/crates/concord-poc/src/: main.rs
beta/scripts/: build-linux.sh
beta/src-tauri/: tauri.conf.json
branding/: BRAND.md  generate_favicons.py  generate_tauri_icons.py
client/: MONETIZATION_PROPOSAL.md  NATIVE_BUILD.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
client/e2e/: console-trace.mjs  load-perf-trace.mjs  local-sidebar-screenshot.mjs  long-trace.mjs  repro-loop.mjs  slow-load-trace.mjs  splash-handoff-screenshot.mjs  splash-verify.mjs  splash-video-trace.mjs  trace-prod-url.mjs  visibility-evidence-screenshot.mjs
client/public/: manifest.json  sw.js
client/src/: App.tsx  bootSplash.ts  index.css  main.tsx  serverPickerGate.ts
config/: Caddyfile  Caddyfile.dev  coturn-entrypoint.sh  discord-bridge.env.example  livekit-entrypoint.sh  livekit.yaml  sslh.conf  turnserver.conf  tuwunel.toml  tuwunel.toml.template
config/discord-voice-bridge/: README.md
config/mautrix-discord/: config.yaml
discord-voice-bridge/: Dockerfile  package-lock.json  package.json
discord-voice-bridge/src/: index.js
docs/: federation-reachability-diagnosis.md  ins-025-federated-sidebar-handoff.md  openclaw_chart_tool_spec.md
docs/architecture/: concord-user-protocol-scope.md  hard-disconnect-on-close-scope.md  hero-account-rfc.md  native-ui-rebuild-scope.md  p2p-bootstrap-deployment.md  p2p-design.md  peer-network.md  peer-presence-timeout-scope.md  porch-design.md  resumable-conflict-agent-scope.md  tailscale-gated-hero-sync-scope.md  user-management-design.md
docs/bridges/: admin-migration.md  discord-video-feasibility.md  discord.md  user-scoped-bridge-redesign.md
docs/deployment/: README.md  github_bug_report_token.md  host-allowlist.md  orrgate.md  tls-mode.md
docs/extensions/: permissions.md  roll20-feasibility.md  session-model.md  shell-api.md  worldview-migration.md
docs/game-center/: game-dev-workflow.md
docs/native-apps/: appletv-feasibility.md  appletv-handoff.md  windows-install.md  windows-paths.md  windows-test-machine.md
docs/reticulum/: main-build-integration.md  transport-trait-audit.md
docs/voice/: port-coherence.md
ext/worldview/: package.json  tsconfig.json
infra/turn/: .env.example  .gitignore  README.md  sslh.conf  (+4 more)
scripts/: build-linux.sh  build_android_native.sh  build_ios_native.sh  build_linux_native.sh  build_macos_native.sh  build_tvos_native.sh  build_windows_native.ps1  build_windows_wsl.sh  concord-dev-up.sh  lint_config_coherence.py  lint_tls_mode_matrix.sh  migrate-federation-config.sh  turn_relay_smoke.py  verify_deployed_bundle.sh  verify_turn_relay.sh  verify_windows_artifact.sh  verify_windows_bundle.sh  verify_windows_dendrite_e2e.ps1  win-dev-bootstrap.ps1
server/: alembic.ini  config.py  database.py  dependencies.py  errors.py  extensions.json  main.py  migrations.py  models.py  pytest.ini  requirements-dev.txt  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: macos-uninstall.sh  nsis-hooks.nsh
src-tauri/resources/dendrite/: README.md
src-tauri/resources/discord_bridge/: .gitignore  README.md
src-tauri/resources/tuwunel/: .gitignore
src-tauri/src/: lib.rs
src-tauri/src/porch/: acl.rs  backup.rs  backup_protocol.rs  channel.rs  conflict_agent.rs  db.rs  error.rs  history_protocol.rs  home_export.rs  home_export_protocol.rs  knock.rs  mod.rs  obsidian.rs  protocol.rs  theme.rs  users.rs  visibility.rs
src-tauri/src/porch/sync/: clock.rs  device.rs  link.rs  merge.rs  mod.rs  protocol.rs
src-tauri/src/porch_ephemeral/: handler.rs  mod.rs
src-tauri/src/servitude/: bootstrap.rs  config.rs  hero_binding.rs  identity.rs  lifecycle.rs  mesh_propagation.rs  mod.rs  p2p.rs  peer_store.rs
src-tauri/src/servitude/concord_user/: local.rs  mod.rs  protocol.rs  trust_store.rs
src-tauri/src/servitude/federation/: activitypub.rs  matrix.rs  mod.rs
src-tauri/src/servitude/hero_sync/: anchor.rs  conflict_queue.rs  gate.rs  mod.rs  protocol.rs
src-tauri/src/servitude/network/: connection_gate.rs  mod.rs  tailscale_detect.rs  tunnel_config.rs  tunnel_detect.rs  wg_tunnel.rs
src-tauri/src/servitude/transport/: dendrite_federation.rs  discord_bridge.rs  matrix_federation.rs  mod.rs  reticulum.rs
src-tauri/src/servitude/voice/: audio.rs  call.rs  error.rs  media.rs  mod.rs  selector.rs  signaling.rs  webrtc_peer.rs
src-tauri/tests/: activitypub_test.rs  audio_pipeline_test.rs  concord_user_protocol_test.rs  federation_test.rs  hero_binding_wire_test.rs  hero_sync_test.rs  home_export_test.rs  identity_test.rs  mesh_propagation_test.rs  p2p_test.rs  peer_store_test.rs  porch_backup_test.rs  porch_knock_test.rs  porch_obsidian_test.rs  porch_sync_test.rs  porch_test.rs  porch_theme_test.rs  porch_users_test.rs  profile_test.rs  tunnel_gate_test.rs  tunnel_test.rs  visibility_mesh_test.rs  voice_mesh_test.rs  voice_test.rs  wg_tunnel_test.rs
src-tvos/: README.md  project.yml
v2/: CLAUDE.md  LICENSE  SESSION_REPORT_0326.md  commercial_deployment_database.md
v2/crates/concord-daemon/: Cargo.toml
v2/crates/concord-daemon/src/: admin.rs  config.rs  main.rs
v2/crates/concord-media/: Cargo.toml
v2/crates/concord-media/src/: audio.rs  engine.rs
v2/src-tauri/: Cargo.toml  tauri.conf.json
v2/src-tauri/capabilities/: mobile.json
v2/src-tauri/src/: lib.rs
v2/src-tauri/src/commands/: dm.rs  servers.rs  voice.rs
web/: Dockerfile  Dockerfile.dev
(+438 files in other folders)
