[workspace]
resolver = "2"
members = [
    "crates/concord-core",
    "crates/concord-net",
    "crates/concord-media",
    "crates/concord-store",
    "crates/concord-webhost",
    "crates/concord-daemon",
    "crates/concord-poc",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/concord-chat/concord"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
