[package]
name = "concord"
version = "0.1.0"
description = "Concord — Decentralized Communication Platform"
authors = ["Colton Orr"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# `default` intentionally omits `devtools` — release builds (which run
# `cargo build --release` without `--features devtools`) must NOT bundle the
# WebView2 inspector. Local dev that wants the inspector should pass
# `--features devtools` to `cargo tauri dev` (or set `default = ["devtools"]`
# locally — DO NOT commit such a change).
default = []
reticulum = []
# Enables the Tauri webview inspector. Gated behind this feature so it can
# only be turned on explicitly (via `cargo build --features devtools` or by
# `cargo tauri dev`'s debug-only build). The corresponding runtime code that
# calls `open_devtools()` is also gated on `cfg(feature = "devtools")` in
# `src/lib.rs`.
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `devtools` is OFF by default — gated behind the `devtools` Cargo feature
# declared in `[features]` above. Release builds (CI: `cargo tauri build` with
# no `--features devtools`) never link the WebView2 inspector. Local dev that
# needs the inspector should run `cargo tauri dev --features devtools` (Tauri
# forwards `--features` straight to cargo).
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = { version = "2", features = ["kdf"] }
# Servitude embedded module dependencies
toml = "0.8"
thiserror = "1.0"
# Async runtime + child process management for the embedded transport.
# `process` — spawn/await tuwunel as a child.
# `net` — TCP health probe against the tuwunel listen port.
# `time` — timeouts on health checks and graceful-shutdown waits.
# `io-util` — capture stdout/stderr streams.
# `sync` — Mutex/Notify for cancellation during start-up races.
# `macros` — #[tokio::test] in unit tests.
# `rt-multi-thread` — the runtime Tauri's command handlers already expect.
tokio = { version = "1", features = ["process", "net", "time", "io-util", "sync", "macros", "rt-multi-thread"] }
# Trait async support for the Transport trait.
async-trait = "0.1"
# Platform-specific data/config directory resolution (used by ReticulumTransport
# and MatrixFederationTransport to locate XDG_DATA_HOME, ~/Library, %APPDATA%).
dirs = "5"
# Cryptographic random token generation for AS registration tokens.
rand = "0.8"
# Hex encoding for token strings.
hex = "0.4"
# Token redaction in log output (commercial-scope security requirement).
regex = "1"
# HTTP client for runtime binary downloads.
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
# Async file IO for streaming downloads to disk.
futures-util = "0.3"
# SHA-256 for the peer-identity fingerprint (Phase 2 — P2P identity). Already
# pulled in transitively by tauri-plugin-stronghold; declared here so this
# crate's direct dependency on it is explicit. No new top-level crate is
# added — we use the existing version pinned in Cargo.lock.
# Stronghold itself supplies the Ed25519 keypair + signing primitives via its
# `procedures` module, so no separate ed25519-dalek dep is required.
sha2 = "0.10"
# iota_stronghold is pulled in transitively by tauri-plugin-stronghold;
# declared here so identity.rs can name its Client/Location types directly.
iota_stronghold = "2.1"

# Unix-only deps for servitude child-process management. `nix::sys::signal`
# gives us SIGTERM for graceful shutdown — std::process::Child::kill uses
# SIGKILL only, which doesn't let tuwunel flush its RocksDB on exit.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

# Linux-specific deps (handled transitively by tauri/webkit2gtk in normal builds,
# this section is reserved for Linux-only crates Concord may add later).
[target.'cfg(target_os = "linux")'.dependencies]

# Windows-specific deps (reserved for Windows-only crates).
[target.'cfg(target_os = "windows")'.dependencies]

# macOS-specific deps (reserved for macOS-only crates).
[target.'cfg(target_os = "macos")'.dependencies]

# Android target deps. Real init must be done on a host with the Android SDK
# via `cargo tauri android init`. This section is a placeholder so the manifest
# is forward-compatible with Tauri v2 mobile builds.
#
# Target triples (added by `rustup target add`):
#   aarch64-linux-android    — primary, phones + Google TV boxes
#   armv7-linux-androideabi  — legacy 32-bit phones
#   i686-linux-android       — emulators
#   x86_64-linux-android     — emulators + Chromebooks
#
# min-sdk 24 (Android 7.0 Nougat) is the Tauri v2 mobile default and matches
# `bundle.android.minSdkVersion` in tauri.conf.json. Do NOT raise it above 26
# without coordinating a Google TV check — Android TV reference devices are
# often pinned to older sdk versions in the wild.
[target.'cfg(target_os = "android")'.dependencies]
# When real init runs on the Android build host, Tauri will auto-populate JNI glue. If
# servitude needs to call into platform Android APIs (e.g. foreground
# service control, Wi-Fi multicast locks for mDNS), add one of:
#   jni = "0.21"
#   ndk-context = "0.1"
#   android-activity = { version = "0.6", features = ["native-activity"] }
# keeping them commented out here until a concrete caller exists.

# iOS target deps. Real init must be done on a macOS host via `cargo tauri ios init`.
#
# Target triples (added by `rustup target add`):
#   aarch64-apple-ios      — device builds (iPhone + iPad physical hardware)
#   aarch64-apple-ios-sim  — Apple Silicon iOS Simulator
#   x86_64-apple-ios       — deprecated Intel simulator, retained for CI
#
# Minimum iOS version is declared in tauri.conf.json (`bundle.iOS.minimumSystemVersion`).
# iPad shares the same Rust target as iPhone; the device family split is
# done in the generated Info.plist via UIDeviceFamily = [1, 2].
[target.'cfg(target_os = "ios")'.dependencies]
# When real init runs on the macOS build host, Tauri will auto-populate objc2 + swift-rs
# bridging through its tauri-runtime. If servitude needs to call into
# platform iOS APIs (e.g. MultipeerConnectivity, Network.framework
# Bonjour browsing, AVAudioSession background mode), add one of:
#   objc2 = "0.5"
#   objc2-foundation = "0.2"
#   objc2-multipeer-connectivity = "0.2"
# keeping them commented out here until a concrete caller exists.

# NOTE: the `reticulum` feature flag is declared in the canonical [features]
# table near the top of this file (line ~14). A second [features] table used
# to live here, which made `cargo build` fail with a TOML "duplicate key"
# parse error and broke `scripts/build_linux_native.sh` end-to-end. Removed
# during the feat/linux-native-app-7e2a sprint after the build was observed
# to fail with: `failed to parse Cargo.toml: TOML parse error at line 116,
# column 2 ... duplicate key`. If you need to add a new feature flag, add
# it to the top [features] table.
[dev-dependencies]
# Servitude tests use only std + serde + toml; no extra deps required.
# Phase-2 identity integration tests need an independent Ed25519 verifier
# (so we don't ask Stronghold to verify its own signatures) plus snapshot
# round-trip helpers. All three crates are ALREADY in the lock file via
# iota_stronghold's transitive graph — declaring them here just exposes
# them to the integration-test target.
ed25519-zebra = "4"
zeroize = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
