[package]
name = "concord-app"
version.workspace = true
edition.workspace = true

[lib]
name = "concord_app"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
concord-core = { path = "../crates/concord-core" }
concord-net = { path = "../crates/concord-net" }
concord-store = { path = "../crates/concord-store" }
concord-media = { path = "../crates/concord-media" }
concord-webhost = { path = "../crates/concord-webhost" }
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
