[package]
name = "concord-media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
str0m = "0.7"
cpal = "0.17"
audiopus = "0.3.0-rc.0"
concord-core = { path = "../concord-core" }
concord-net = { path = "../concord-net" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
